switch to only building es, not umd

--- a/src/Introduction.mdx
+++ b/src/Introduction.mdx
@@ -4,7 +4,7 @@ import { Meta } from "@storybook/blocks";
 
 # Nitro UI
 
-![CI](https://github.com/nitro-bio/nitro-ui/actions/workflows/main.yml/badge.svg)
+![CI](https://github.com/nitro-bio/sequence-viewers/actions/workflows/main.yml/badge.svg)
 
 ## React Component Library for Life Science
 
@@ -13,9 +13,9 @@ import { Meta } from "@storybook/blocks";
 #### Install
 
 ```bash
-npm i @ninjha01/nitro-ui 
-# or yarn add @ninjha01/nitro-ui
-# or pnpm i @ninjha01/nitro-ui
+npm i @ninjha01/sequence-viewers 
+# or yarn add @ninjha01/sequence-viewers
+# or pnpm i @ninjha01/sequence-viewers
 ```
 
 #### Styling
@@ -24,19 +24,19 @@ This project is built on top of [tailwindcss](https://tailwindcss.com/).
 
 If you also want to use tailwindcss in your project, you can follow the [installation instructions](https://tailwindcss.com/docs/installation) to get started.
 
-Once you've done so, add `@ninjha01/nitro-ui` to your `tailwind.config.js` file:
+Once you've done so, add `@ninjha01/sequence-viewers` to your `tailwind.config.js` file:
 
 ```js
   content: [
     "...",
-    "node_modules/@ninjha01/nitro-ui/dist/**/*.{js,ts,jsx,tsx}",
+    "node_modules/@ninjha01/sequence-viewers/dist/**/*.{js,ts,jsx,tsx}",
   ],
 ```
 
 If you don't want to use tailwind in your project, you can import the compiled css file from the `dist` folder.
 
 ```js
-import "path/to/node_modules/@ninjha01/nitro-ui/dist/nitro.css";
+import "path/to/node_modules/@ninjha01/sequence-viewers/dist/nitro.css";
 ```
 
 
